--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -29,7 +29,8 @@
 <div class="header-container">
   <nb-actions size="small">
 
-    <nb-action class="control-item">
+    <!-- busca e email -->
+    <!-- <nb-action class="control-item">
       <nb-search
         type="rotate-layout"
         matRipple
@@ -42,14 +43,16 @@
       matRipple
       [matRippleUnbounded]="true"
       [matRippleCentered]="true"
-    ></nb-action>
-    <nb-action
+    ></nb-action> -->
+
+    <!-- notificacao -->
+    <!-- <nb-action
       class="control-item"
       icon="bell-outline"
       matRipple
       [matRippleUnbounded]="true"
       [matRippleCentered]="true"
-    ></nb-action>
+    ></nb-action> -->
     <nb-action
       class="user-action"
       *nbIsGranted="['view', 'user']"
