comments and console.logs removed

--- a/src/app/client/formulario/resultado/resultado.component.html
+++ b/src/app/client/formulario/resultado/resultado.component.html
@@ -1,6 +1,6 @@
 <nb-accordion>
     <nb-accordion-item *ngFor="let item of objetoRecebido.recorrencia_processos">
-     <nb-accordion-item-header>Processo {{((item.recorrencia/objetoRecebido.total)*100).toFixed(2)}}% mais indicado: {{item.nome}}</nb-accordion-item-header>
+     <nb-accordion-item-header>{{item.nome}}: {{((item.recorrencia/objetoRecebido.total)*100).toFixed(2)}}% de Adequação ao contexto de aplicação. </nb-accordion-item-header>
      <nb-accordion-item-body>
        {{item.descricao}}
      </nb-accordion-item-body>
