--- a/src/app/client/navegar-formulario/navegar-formulario.component.html
+++ b/src/app/client/navegar-formulario/navegar-formulario.component.html
@@ -1,4 +1,4 @@
 <div  class="d-flex justify-content-center align-items-center vh-100">
-<button type="button" nbButton status="danger" (click)="OnClick()">Formulario tranferencia do Conhecimento</button> 
+<button type="button" nbButton status="danger" (click)="OnClick()">Formulario de Transferência do Conhecimento</button> 
 </div>
 
