--- a/src/app/ktadmin/alternativa/processos-possuidos/processos-possuidos.component.html
+++ b/src/app/ktadmin/alternativa/processos-possuidos/processos-possuidos.component.html
@@ -1,13 +1,10 @@
 <nb-card>
-    <!-- <nb-card-header>
-      CRUD Possuir
-    </nb-card-header> -->
-  
+ 
     <nb-card-body>
-      <ng2-smart-table [settings]="settings" [source]="source" (createConfirm)="onAddConfirm($event)" (deleteConfirm)="onDeleteConfirm($event)" (editConfirm)="onEditConfirm($event)">
+      <ng2-smart-table [settings]="settings" [source]="source" (createConfirm)="onAddConfirm($event)" (deleteConfirm)="onDeleteConfirm($event)" >
       </ng2-smart-table>
     </nb-card-body>
   </nb-card>
 
-  <!-- <button (click)="getStakeholders()" ></button> -->
+  
   
