--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -10,7 +10,7 @@
     >
       <nb-icon [icon]="(materialTheme$ | async) ? 'menu-outline' : 'menu-2-outline'"></nb-icon>
     </a>
-    <a class="logo" href="#" (click)="navigateHome()"><span>Transferência do Conhecimento</span></a>
+    <a class="logo" href="#" (click)="navigateHome()"><span>Know Eval</span></a>
   </div>
   <!-- <nb-select
     status="primary"
