--- a/src/app/client/formulario/formulario.component.html
+++ b/src/app/client/formulario/formulario.component.html
@@ -1,5 +1,5 @@
 <form>
-    <nb-card class="list-card" size="medium">
+    <nb-card class="list-card" size="giant">
         <nb-card-body>
             <nb-list>
                 <nb-list-item  *ngFor="let alternativa of alternativas; let i = index" ngForTrackBy="i">
